2006-08-13  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c:
   Use wrappers for converting between utf8 and locale encoding.
   Fixed small memory leak.


2006-08-12  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c:
   Removed unnecessary code in document_replace_tabs().
   Really take tab width when replacing instead of using width = 4.
 * src/Makefile.am: Applied patch from Fryderyk Dziarmagowski to fix
                    build problem with linker flag "-Wl,--as-needed"
                    (closes #1539239).


2006-08-12  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/search.c: Enable case sensitive when regex search enabled.
                 Some label text changes for the dialogs.
                 Use hbox packing in Find and Find in files dialogs.
                 Add select directory button for Find in files.
 * src/utils.c, src/utils.h:
   Add wrappers for converting between utf8 and locale encoding.


2006-08-11  Nick Treleaven  <nick.treleaven@btinternet.com>

 * src/keybindings.c, src/geany.h, src/callbacks.c, src/callbacks.h,
   src/search.c, src/search.h, src/dialogs.c, src/main.c,
   src/dialogs.h: Group search related code.


2006-08-11  Enrico Tröger  <enrico.troeger@uvena.de>

 * src/document.c:
   Changed SEARCH_NOT_FOUND_TXT.
   Fixed possible segfault when replacing tabs by spaces.
 * tagmanager/python.c: Fixed wrong classification of local functions
                        as methods(thanks to Sebastian Koch).
 * src/sci_cb.c: Fixed segfault when try to (un)comment some code and
                 no filetype is set(reported by John Gabriele).


2006-08-09  Enrico Tröger  <enrico.troeger@uvena.de>

 * doc/geany.docbook:
   Removed section about global ctags, the information were obsolete.
   Added section about file encodings and the Unicode Byte-Order-Mark.
 * doc/images/*: Updated screenshots.
 * New release: Geany 0.8 "Kadir".


2006-08-09  Nick Treleaven  <nick.treleaven@btinternet.com>
